feat: reveal function

--- a/src/popup.html
+++ b/src/popup.html
@@ -1,5 +1,8 @@
 <html>
+  <head>
+    <!-- <link rel="stylesheet" href="popup.css">  -->
   <body>
-    <<h1>Hello Extensions</h1>>
+    <button id="reveal-btn">🫣 Reveal Score</button>
   </body>
+  <script src="script.js"></script>
 </html>
